<resources>
    <string name="app_name">Hello World</string>
    <string name="hello_world">Hello World!</string>
    <string name="fragment_check">Fragment Check</string>
    <string name="single_task">Single Task</string>
    <string name="standard">Standard</string>
    <string name="single_top">Single Top</string>
    <string name="single_instance">Single Instance</string>
    <string name="launch_map">Launch Map</string>
    <string name="launch_dialer">Launch Dialer</string>
    <string name="addition">Addition</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="add">Add</string>
    <string name="launch_fragment">Launch Fragment Communication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_here">Click Here</string>
    <string name="notify_fragment">Notify Fragment</string>
    <string name="form_control_activity">Form Control Activity</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_you_mobile">Enter You Mobile</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="select_your_gender">Select Your Gender</string>
    <string name="select_your_skills">Select Your Skills</string>
    <string name="skill_java">Java</string>
    <string name="skill_dot_net">.Net</string>
    <string name="skill_java_script">JavaScript</string>
    <string name="skill_react_native">React Native</string>
    <string name="rate_yourself">Rate Yourself Out of 5 in Technical Aspect</string>
    <string name="select_your_birth_date">Select Your Birth Date</string>
    <string name="ready_for_a_challenge">Ready for a Challenge?</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="gender">Gender</string>
    <string name="skills">Skills</string>
    <string name="self_rating">Self Rating</string>
    <string name="dob">Date of Birth</string>
    <string name="recycler_view_demo">Recycler View Demo</string>
    <string name="static_image">Static Image</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="launch_weather_activity">Launch Weather Activity</string>
    <string name="enter_a_city_name">Enter a city name</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="weather_condition">Weather Condition</string>
    <string name="longitude">Longitude</string>
    <string name="Latitude">Latitude</string>
    <string name="launch_weather_activity_volley">Launch Weather Activity Volley</string>
</resources>
