<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".FormControlActivity">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mobileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_you_mobile"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:paddingLeft="8dp"
            android:text="@string/select_your_gender"
            android:textColor="@color/colorBlack" />

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/maleRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male" />

            <RadioButton
                android:id="@+id/femaleRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/gender_female" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:paddingLeft="8dp"
            android:text="@string/select_your_skills"
            android:textColor="@color/colorBlack" />

        <CheckBox
            android:id="@+id/javaCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skill_java" />

        <CheckBox
            android:id="@+id/dotNetCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skill_dot_net" />

        <CheckBox
            android:id="@+id/javaScriptCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skill_java_script" />

        <CheckBox
            android:id="@+id/reactNativeCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skill_react_native" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:paddingLeft="8dp"
            android:text="@string/rate_yourself"
            android:textColor="@color/colorBlack" />

        <RatingBar
            android:id="@+id/selfRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5" />

        <Button
            android:id="@+id/birthDateBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/select_your_birth_date" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/challengeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:text="@string/ready_for_a_challenge" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_save_white_24dp"
            app:fabSize="normal" />
    </LinearLayout>

</ScrollView>