<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SingleTopActivity">


    <TextView
        android:id="@+id/singleTopText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_top"
        android:textSize="24sp" />

    <Button
        android:id="@+id/singleTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_task" />

    <Button
        android:id="@+id/singleInstance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_instance" />

    <Button
        android:id="@+id/singleTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_top" />

    <Button
        android:id="@+id/standard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard" />
</LinearLayout>