<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFirstFragmentBackground"
        tools:context=".FirstFragment">

        <EditText
            android:id="@+id/firstNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:hint="@string/enter_first_number"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/secondNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstNumberEditText"
            android:hint="@string/enter_second_number"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/secondNumberEditText"
            android:text="@string/add" />

        <Button
            android:id="@+id/clickBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addBtn"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:background="#0a0909"
            android:text="@string/click_here"
            android:textColor="#FFF" />

    </RelativeLayout>
</ScrollView>