<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:stretchColumns="0">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp">

        <TextView
            android:text="@string/name"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nameText"
            android:layout_column="1"
            android:text=""
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp">

        <TextView
            android:text="@string/mobile"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/mobileText"
            android:layout_column="1"
            android:text=""
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp">

        <TextView
            android:text="@string/gender"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/genderText"
            android:layout_column="1"
            android:text=""
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp">

        <TextView
            android:text="@string/dob"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dobText"
            android:layout_column="1"
            android:text=""
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp">

        <TextView
            android:text="@string/skills"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/skillsText"
            android:layout_column="1"
            android:text=""
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp">

        <TextView
            android:text="@string/self_rating"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ratingText"
            android:layout_column="1"
            android:text=""
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp">

        <TextView
            android:text="@string/ready_for_a_challenge"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/challengeText"
            android:layout_column="1"
            android:text=""
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
    </TableRow>

</TableLayout>
